--- a/20240329 專案資料/文字.html
+++ b/20240329 專案資料/文字.html
@@ -20,7 +20,7 @@
       text = text.toLowerCase();
       console.log(text);
 
-      // 更改同一資料型態  text = text.trim().toUpperCase().toLowerCase()
+      // 當更改同一資料型態  text = text.trim().toUpperCase().toLowerCase()
 
       let text2 = "外賣 咖哩拌飯 咖哩烏冬";
       //   .includes(尋找文字, 從第幾個字開始)
