--- a/20240329 專案資料/array2_0329.html
+++ b/20240329 專案資料/array2_0329.html
@@ -15,7 +15,7 @@
       // .indexOf
       // 尋找陣列是否有東西 符合搜尋內容 並回傳第一個符合的索引 -1為找不到
       console.log(numbers.indexOf(100, 2)); // 0 1 2 3 => 3
-      // .indexOf
+      // .lastIndexOf
       // 尋找陣列是否有東西 符合搜尋內容 並回傳最後一個符合的索引 -1為找不到
       console.log(numbers.lastIndexOf(100, 2)); // 3 2 1 0 => 0
 
