--- a/20240329 專案資料/array3_0329.html
+++ b/20240329 專案資料/array3_0329.html
@@ -22,7 +22,7 @@
 
       // .every(function)
       // 迴圈陣列 每個東西都執行提供的 function
-      // 判斷陣列 所以的東西都執行完 function
+      // 判斷陣列 所有的東西都執行完 function
       // 然後 return true
       // 回傳 boolean
       const every = numbers2.every((value) => {
